EpicLangParser.py
# Generated from EpicLang.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class EpicLangParser ( Parser ):

    grammarFileName = "EpicLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "','", "')'", "';'", 
                     "'in'", "'..'", "'='", "'['", "']'", "'+'", "'-'", 
                     "'!'", "'*'", "'/'", "'%'", "'<'", "'<='", "'>'", "'>='", 
                     "'=='", "'!='", "'&'", "'|'", "'break'", "'do'", "'continue'", 
                     "'else'", "'func'", "'for'", "'if'", "'then'", "'len'", 
                     "'none'", "'print'", "'return'", "'while'", "'true'", 
                     "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Break", "Do", "Continue", 
                      "Else", "Func", "For", "If", "Then", "Len", "NoneObj", 
                      "Print", "Return", "While", "TrueLiteral", "FalseLiteral", 
                      "LINE_COMMENT", "NUMBER", "SPACE", "VARIABLE" ]

    RULE_program = 0
    RULE_block = 1
    RULE_identifier = 2
    RULE_functionDecl = 3
    RULE_stmt = 4
    RULE_expr = 5

    ruleNames =  [ "program", "block", "identifier", "functionDecl", "stmt", 
                   "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    Break=26
    Do=27
    Continue=28
    Else=29
    Func=30
    For=31
    If=32
    Then=33
    Len=34
    NoneObj=35
    Print=36
    Return=37
    While=38
    TrueLiteral=39
    FalseLiteral=40
    LINE_COMMENT=41
    NUMBER=42
    SPACE=43
    VARIABLE=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EpicLangParser.EOF, 0)

        def functionDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EpicLangParser.FunctionDeclContext)
            else:
                return self.getTypedRuleContext(EpicLangParser.FunctionDeclContext,i)


        def getRuleIndex(self):
            return EpicLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = EpicLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EpicLangParser.Func:
                self.state = 12
                self.functionDecl()
                self.state = 17
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 18
            self.match(EpicLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EpicLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(EpicLangParser.StmtContext,i)


        def getRuleIndex(self):
            return EpicLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = EpicLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(EpicLangParser.T__0)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EpicLangParser.T__0) | (1 << EpicLangParser.T__2) | (1 << EpicLangParser.T__5) | (1 << EpicLangParser.T__9) | (1 << EpicLangParser.T__11) | (1 << EpicLangParser.T__12) | (1 << EpicLangParser.T__13) | (1 << EpicLangParser.Break) | (1 << EpicLangParser.Continue) | (1 << EpicLangParser.For) | (1 << EpicLangParser.If) | (1 << EpicLangParser.Len) | (1 << EpicLangParser.NoneObj) | (1 << EpicLangParser.Print) | (1 << EpicLangParser.Return) | (1 << EpicLangParser.While) | (1 << EpicLangParser.TrueLiteral) | (1 << EpicLangParser.FalseLiteral) | (1 << EpicLangParser.NUMBER) | (1 << EpicLangParser.VARIABLE))) != 0):
                self.state = 21
                self.stmt()
                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 27
            self.match(EpicLangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.var = None # Token

        def VARIABLE(self):
            return self.getToken(EpicLangParser.VARIABLE, 0)

        def getRuleIndex(self):
            return EpicLangParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = EpicLangParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            localctx.var = self.match(EpicLangParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token

        def Func(self):
            return self.getToken(EpicLangParser.Func, 0)

        def block(self):
            return self.getTypedRuleContext(EpicLangParser.BlockContext,0)


        def VARIABLE(self):
            return self.getToken(EpicLangParser.VARIABLE, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EpicLangParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(EpicLangParser.IdentifierContext,i)


        def getRuleIndex(self):
            return EpicLangParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = EpicLangParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(EpicLangParser.Func)

            self.state = 32
            localctx.name = self.match(EpicLangParser.VARIABLE)
            self.state = 33
            self.match(EpicLangParser.T__2)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==EpicLangParser.VARIABLE:
                self.state = 34
                self.identifier()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==EpicLangParser.T__3:
                    self.state = 35
                    self.match(EpicLangParser.T__3)
                    self.state = 36
                    self.identifier()
                    self.state = 41
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 44
            self.match(EpicLangParser.T__4)
            self.state = 45
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EpicLangParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Print(self):
            return self.getToken(EpicLangParser.Print, 0)
        def expr(self):
            return self.getTypedRuleContext(EpicLangParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfElseStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def If(self):
            return self.getToken(EpicLangParser.If, 0)
        def expr(self):
            return self.getTypedRuleContext(EpicLangParser.ExprContext,0)

        def Then(self):
            return self.getToken(EpicLangParser.Then, 0)
        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EpicLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(EpicLangParser.StmtContext,i)

        def Else(self):
            return self.getToken(EpicLangParser.Else, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfElseStmt" ):
                listener.enterIfElseStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfElseStmt" ):
                listener.exitIfElseStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElseStmt" ):
                return visitor.visitIfElseStmt(self)
            else:
                return visitor.visitChildren(self)


    class AssignStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.var = None # Token
            self.rhs = None # ExprContext
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(EpicLangParser.VARIABLE, 0)
        def expr(self):
            return self.getTypedRuleContext(EpicLangParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(EpicLangParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class ContinueStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Continue(self):
            return self.getToken(EpicLangParser.Continue, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinueStmt" ):
                listener.enterContinueStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinueStmt" ):
                listener.exitContinueStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinueStmt" ):
                return visitor.visitContinueStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def If(self):
            return self.getToken(EpicLangParser.If, 0)
        def expr(self):
            return self.getTypedRuleContext(EpicLangParser.ExprContext,0)

        def Then(self):
            return self.getToken(EpicLangParser.Then, 0)
        def stmt(self):
            return self.getTypedRuleContext(EpicLangParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class AssignIdxStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EpicLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(EpicLangParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignIdxStmt" ):
                listener.enterAssignIdxStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignIdxStmt" ):
                listener.exitAssignIdxStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignIdxStmt" ):
                return visitor.visitAssignIdxStmt(self)
            else:
                return visitor.visitChildren(self)


    class WhileStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def While(self):
            return self.getToken(EpicLangParser.While, 0)
        def expr(self):
            return self.getTypedRuleContext(EpicLangParser.ExprContext,0)

        def Do(self):
            return self.getToken(EpicLangParser.Do, 0)
        def stmt(self):
            return self.getTypedRuleContext(EpicLangParser.StmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class BreakStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Break(self):
            return self.getToken(EpicLangParser.Break, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStmt" ):
                listener.enterBreakStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStmt" ):
                listener.exitBreakStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)


    class SingleStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(EpicLangParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingleStmt" ):
                listener.enterSingleStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingleStmt" ):
                listener.exitSingleStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleStmt" ):
                return visitor.visitSingleStmt(self)
            else:
                return visitor.visitChildren(self)


    class NullStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNullStmt" ):
                listener.enterNullStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNullStmt" ):
                listener.exitNullStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNullStmt" ):
                return visitor.visitNullStmt(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Return(self):
            return self.getToken(EpicLangParser.Return, 0)
        def expr(self):
            return self.getTypedRuleContext(EpicLangParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)


    class ForStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.StmtContext
            super().__init__(parser)
            self.var = None # Token
            self.lbound = None # ExprContext
            self.ubound = None # ExprContext
            self.copyFrom(ctx)

        def For(self):
            return self.getToken(EpicLangParser.For, 0)
        def Do(self):
            return self.getToken(EpicLangParser.Do, 0)
        def stmt(self):
            return self.getTypedRuleContext(EpicLangParser.StmtContext,0)

        def VARIABLE(self):
            return self.getToken(EpicLangParser.VARIABLE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EpicLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(EpicLangParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = EpicLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = EpicLangParser.BlockStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.block()
                pass

            elif la_ == 2:
                localctx = EpicLangParser.PrintStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.match(EpicLangParser.Print)
                self.state = 49
                self.expr(0)
                self.state = 50
                self.match(EpicLangParser.T__5)
                pass

            elif la_ == 3:
                localctx = EpicLangParser.ContinueStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.match(EpicLangParser.Continue)
                self.state = 53
                self.match(EpicLangParser.T__5)
                pass

            elif la_ == 4:
                localctx = EpicLangParser.BreakStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.match(EpicLangParser.Break)
                self.state = 55
                self.match(EpicLangParser.T__5)
                pass

            elif la_ == 5:
                localctx = EpicLangParser.ReturnStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.match(EpicLangParser.Return)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EpicLangParser.T__2) | (1 << EpicLangParser.T__9) | (1 << EpicLangParser.T__11) | (1 << EpicLangParser.T__12) | (1 << EpicLangParser.T__13) | (1 << EpicLangParser.Len) | (1 << EpicLangParser.NoneObj) | (1 << EpicLangParser.TrueLiteral) | (1 << EpicLangParser.FalseLiteral) | (1 << EpicLangParser.NUMBER) | (1 << EpicLangParser.VARIABLE))) != 0):
                    self.state = 57
                    self.expr(0)


                self.state = 60
                self.match(EpicLangParser.T__5)
                pass

            elif la_ == 6:
                localctx = EpicLangParser.IfStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 61
                self.match(EpicLangParser.If)
                self.state = 62
                self.expr(0)
                self.state = 63
                self.match(EpicLangParser.Then)
                self.state = 64
                self.stmt()
                pass

            elif la_ == 7:
                localctx = EpicLangParser.IfElseStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 66
                self.match(EpicLangParser.If)
                self.state = 67
                self.expr(0)
                self.state = 68
                self.match(EpicLangParser.Then)
                self.state = 69
                self.stmt()
                self.state = 70
                self.match(EpicLangParser.Else)
                self.state = 71
                self.stmt()
                pass

            elif la_ == 8:
                localctx = EpicLangParser.ForStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 73
                self.match(EpicLangParser.For)
                self.state = 74
                localctx.var = self.match(EpicLangParser.VARIABLE)
                self.state = 75
                self.match(EpicLangParser.T__6)

                self.state = 76
                localctx.lbound = self.expr(0)
                self.state = 77
                self.match(EpicLangParser.T__7)

                self.state = 78
                localctx.ubound = self.expr(0)
                self.state = 79
                self.match(EpicLangParser.Do)
                self.state = 80
                self.stmt()
                pass

            elif la_ == 9:
                localctx = EpicLangParser.WhileStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 82
                self.match(EpicLangParser.While)
                self.state = 83
                self.expr(0)
                self.state = 84
                self.match(EpicLangParser.Do)
                self.state = 85
                self.stmt()
                pass

            elif la_ == 10:
                localctx = EpicLangParser.AssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 87
                localctx.var = self.match(EpicLangParser.VARIABLE)
                self.state = 88
                self.match(EpicLangParser.T__8)

                self.state = 89
                localctx.rhs = self.expr(0)
                self.state = 90
                self.match(EpicLangParser.T__5)
                pass

            elif la_ == 11:
                localctx = EpicLangParser.AssignIdxStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 92
                self.expr(0)
                self.state = 93
                self.match(EpicLangParser.T__9)
                self.state = 94
                self.expr(0)
                self.state = 95
                self.match(EpicLangParser.T__10)
                self.state = 96
                self.match(EpicLangParser.T__8)
                self.state = 97
                self.expr(0)
                pass

            elif la_ == 12:
                localctx = EpicLangParser.SingleStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 99
                self.expr(0)
                self.state = 100
                self.match(EpicLangParser.T__5)
                pass

            elif la_ == 13:
                localctx = EpicLangParser.NullStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 102
                self.match(EpicLangParser.T__5)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EpicLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FuncCallContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.ExprContext
            super().__init__(parser)
            self.name = None # Token
            self.copyFrom(ctx)

        def VARIABLE(self):
            return self.getToken(EpicLangParser.VARIABLE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EpicLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(EpicLangParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncCall" ):
                listener.enterFuncCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncCall" ):
                listener.exitFuncCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCall" ):
                return visitor.visitFuncCall(self)
            else:
                return visitor.visitChildren(self)


    class TrueLiteralContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TrueLiteral(self):
            return self.getToken(EpicLangParser.TrueLiteral, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrueLiteral" ):
                listener.enterTrueLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrueLiteral" ):
                listener.exitTrueLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrueLiteral" ):
                return visitor.visitTrueLiteral(self)
            else:
                return visitor.visitChildren(self)


    class NumExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.ExprContext
            super().__init__(parser)
            self.num = None # Token
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(EpicLangParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumExpr" ):
                listener.enterNumExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumExpr" ):
                listener.exitNumExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumExpr" ):
                return visitor.visitNumExpr(self)
            else:
                return visitor.visitChildren(self)


    class VarExprContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EpicLangParser.ExprContext
            super().__init__(parser)
            self.var = None # Token
            self.copyFrom(ctx)
